--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "all": "node tools/all-from-path.js",
     "start": "npm run server",
-    "server": "npx nodemon --watch . --ignore htdocs --exec node tools/server.js"
+    "server": "npx nodemon --watch . --ignore htdocs/all.json --exec node tools/server.js"
   },
   "type": "module",
   "devDependencies": {
