--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "all": "node tools/all-from-path.js",
+    "all": "node tools/all-from-path.js && git add htdocs/all.json",
     "start": "npm run server",
     "server": "npx nodemon --watch . --ignore htdocs/all.json --exec node tools/server.js"
   },
